// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Query.posts array fetches the first 2 posts with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Private project post for admin@test.com",
          "frTitle": "Post d'un projet privé pour admin@test.com",
          "id": "UG9zdDpwb3N0MTY=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
              "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
            },
          ],
          "publishedAt": "2019-01-01 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post d'un projet privé pour admin@test.com",
          "translations": Array [
            Object {
              "abstract": null,
              "body": "Very good, approved by la street",
              "locale": "EN_GB",
              "title": "Private project post for admin@test.com",
            },
            Object {
              "abstract": null,
              "body": "Très bien tout ça je valide",
              "locale": "FR_FR",
              "title": "Post d'un projet privé pour admin@test.com",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 10",
          "frTitle": "Post FR 10",
          "id": "UG9zdDpwb3N0MTA=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 10",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 10",
              "body": "Body of post EN 10",
              "locale": "EN_GB",
              "title": "Post EN 10",
            },
            Object {
              "abstract": "Résumé du post FR 10",
              "body": "Contenu du post FR 10",
              "locale": "FR_FR",
              "title": "Post FR 10",
            },
          ],
        },
      },
    ],
    "totalCount": 15,
  },
}
`;

exports[`Internal|Query.posts array fetches the first 3 posts after one specific post with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Post EN 10",
          "frTitle": "Post FR 10",
          "id": "UG9zdDpwb3N0MTA=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 10",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 10",
              "body": "Body of post EN 10",
              "locale": "EN_GB",
              "title": "Post EN 10",
            },
            Object {
              "abstract": "Résumé du post FR 10",
              "body": "Contenu du post FR 10",
              "locale": "FR_FR",
              "title": "Post FR 10",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 12",
          "frTitle": "Post FR 12",
          "id": "UG9zdDpwb3N0MTI=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 12",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 12",
              "body": "Body of post EN 12",
              "locale": "EN_GB",
              "title": "Post EN 12",
            },
            Object {
              "abstract": "Résumé du post FR 12",
              "body": "Contenu du post FR 12",
              "locale": "FR_FR",
              "title": "Post FR 12",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 13",
          "frTitle": "Post FR 13",
          "id": "UG9zdDpwb3N0MTM=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 13",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 13",
              "body": "Body of post EN 13",
              "locale": "EN_GB",
              "title": "Post EN 13",
            },
            Object {
              "abstract": "Résumé du post FR 13",
              "body": "Contenu du post FR 13",
              "locale": "FR_FR",
              "title": "Post FR 13",
            },
          ],
        },
      },
    ],
    "totalCount": 15,
  },
}
`;

exports[`Internal|Query.posts array fetches the posts filtered by project with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Post EN 1",
          "frTitle": "Post FR 1",
          "id": "UG9zdDpwb3N0MQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 1",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 1",
              "body": "Body of post EN 1",
              "locale": "EN_GB",
              "title": "Post EN 1",
            },
            Object {
              "abstract": "Résumé du post FR 1",
              "body": "Contenu du post FR 1",
              "locale": "FR_FR",
              "title": "Post FR 1",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 2",
          "frTitle": "Post FR 2",
          "id": "UG9zdDpwb3N0Mg==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 2",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 2",
              "body": "Body of post EN 2",
              "locale": "EN_GB",
              "title": "Post EN 2",
            },
            Object {
              "abstract": "Résumé du post FR 2",
              "body": "Contenu du post FR 2",
              "locale": "FR_FR",
              "title": "Post FR 2",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 3",
          "frTitle": "Post FR 3",
          "id": "UG9zdDpwb3N0Mw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 3",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 3",
              "body": "Body of post EN 3",
              "locale": "EN_GB",
              "title": "Post EN 3",
            },
            Object {
              "abstract": "Résumé du post FR 3",
              "body": "Contenu du post FR 3",
              "locale": "FR_FR",
              "title": "Post FR 3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 4",
          "frTitle": "Post FR 4",
          "id": "UG9zdDpwb3N0NA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 4",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 4",
              "body": "Body of post EN 4",
              "locale": "EN_GB",
              "title": "Post EN 4",
            },
            Object {
              "abstract": "Résumé du post FR 4",
              "body": "Contenu du post FR 4",
              "locale": "FR_FR",
              "title": "Post FR 4",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 5",
          "frTitle": "Post FR 5",
          "id": "UG9zdDpwb3N0NQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 5",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 5",
              "body": "Body of post EN 5",
              "locale": "EN_GB",
              "title": "Post EN 5",
            },
            Object {
              "abstract": "Résumé du post FR 5",
              "body": "Contenu du post FR 5",
              "locale": "FR_FR",
              "title": "Post FR 5",
            },
          ],
        },
      },
    ],
    "totalCount": 5,
  },
}
`;

exports[`Internal|Query.posts array fetches the posts filtered by theme and project with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Private project post for admin@test.com",
          "frTitle": "Post d'un projet privé pour admin@test.com",
          "id": "UG9zdDpwb3N0MTY=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
              "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
            },
          ],
          "publishedAt": "2019-01-01 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post d'un projet privé pour admin@test.com",
          "translations": Array [
            Object {
              "abstract": null,
              "body": "Very good, approved by la street",
              "locale": "EN_GB",
              "title": "Private project post for admin@test.com",
            },
            Object {
              "abstract": null,
              "body": "Très bien tout ça je valide",
              "locale": "FR_FR",
              "title": "Post d'un projet privé pour admin@test.com",
            },
          ],
        },
      },
    ],
    "totalCount": 1,
  },
}
`;

exports[`Internal|Query.posts array fetches the posts filtered by theme with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Private project post for admin@test.com",
          "frTitle": "Post d'un projet privé pour admin@test.com",
          "id": "UG9zdDpwb3N0MTY=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
              "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
            },
          ],
          "publishedAt": "2019-01-01 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post d'un projet privé pour admin@test.com",
          "translations": Array [
            Object {
              "abstract": null,
              "body": "Very good, approved by la street",
              "locale": "EN_GB",
              "title": "Private project post for admin@test.com",
            },
            Object {
              "abstract": null,
              "body": "Très bien tout ça je valide",
              "locale": "FR_FR",
              "title": "Post d'un projet privé pour admin@test.com",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 12",
          "frTitle": "Post FR 12",
          "id": "UG9zdDpwb3N0MTI=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 12",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 12",
              "body": "Body of post EN 12",
              "locale": "EN_GB",
              "title": "Post EN 12",
            },
            Object {
              "abstract": "Résumé du post FR 12",
              "body": "Contenu du post FR 12",
              "locale": "FR_FR",
              "title": "Post FR 12",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 13",
          "frTitle": "Post FR 13",
          "id": "UG9zdDpwb3N0MTM=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 13",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 13",
              "body": "Body of post EN 13",
              "locale": "EN_GB",
              "title": "Post EN 13",
            },
            Object {
              "abstract": "Résumé du post FR 13",
              "body": "Contenu du post FR 13",
              "locale": "FR_FR",
              "title": "Post FR 13",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 14",
          "frTitle": "Post FR 14",
          "id": "UG9zdDpwb3N0MTQ=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 14",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 14",
              "body": "Body of post EN 14",
              "locale": "EN_GB",
              "title": "Post EN 14",
            },
            Object {
              "abstract": "Résumé du post FR 14",
              "body": "Contenu du post FR 14",
              "locale": "FR_FR",
              "title": "Post FR 14",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 15",
          "frTitle": "Post FR 15",
          "id": "UG9zdDpwb3N0MTU=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 15",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 15",
              "body": "Body of post EN 15",
              "locale": "EN_GB",
              "title": "Post EN 15",
            },
            Object {
              "abstract": "Résumé du post FR 15",
              "body": "Contenu du post FR 15",
              "locale": "FR_FR",
              "title": "Post FR 15",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 1",
          "frTitle": "Post FR 1",
          "id": "UG9zdDpwb3N0MQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 1",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 1",
              "body": "Body of post EN 1",
              "locale": "EN_GB",
              "title": "Post EN 1",
            },
            Object {
              "abstract": "Résumé du post FR 1",
              "body": "Contenu du post FR 1",
              "locale": "FR_FR",
              "title": "Post FR 1",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 2",
          "frTitle": "Post FR 2",
          "id": "UG9zdDpwb3N0Mg==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 2",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 2",
              "body": "Body of post EN 2",
              "locale": "EN_GB",
              "title": "Post EN 2",
            },
            Object {
              "abstract": "Résumé du post FR 2",
              "body": "Contenu du post FR 2",
              "locale": "FR_FR",
              "title": "Post FR 2",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 3",
          "frTitle": "Post FR 3",
          "id": "UG9zdDpwb3N0Mw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 3",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 3",
              "body": "Body of post EN 3",
              "locale": "EN_GB",
              "title": "Post EN 3",
            },
            Object {
              "abstract": "Résumé du post FR 3",
              "body": "Contenu du post FR 3",
              "locale": "FR_FR",
              "title": "Post FR 3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 4",
          "frTitle": "Post FR 4",
          "id": "UG9zdDpwb3N0NA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 4",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 4",
              "body": "Body of post EN 4",
              "locale": "EN_GB",
              "title": "Post EN 4",
            },
            Object {
              "abstract": "Résumé du post FR 4",
              "body": "Contenu du post FR 4",
              "locale": "FR_FR",
              "title": "Post FR 4",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 5",
          "frTitle": "Post FR 5",
          "id": "UG9zdDpwb3N0NQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 5",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 5",
              "body": "Body of post EN 5",
              "locale": "EN_GB",
              "title": "Post EN 5",
            },
            Object {
              "abstract": "Résumé du post FR 5",
              "body": "Contenu du post FR 5",
              "locale": "FR_FR",
              "title": "Post FR 5",
            },
          ],
        },
      },
    ],
    "totalCount": 10,
  },
}
`;

exports[`Internal|Query.posts array fetches the posts ordered by published date ascending with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Post EN 1",
          "frTitle": "Post FR 1",
          "id": "UG9zdDpwb3N0MQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 1",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 1",
              "body": "Body of post EN 1",
              "locale": "EN_GB",
              "title": "Post EN 1",
            },
            Object {
              "abstract": "Résumé du post FR 1",
              "body": "Contenu du post FR 1",
              "locale": "FR_FR",
              "title": "Post FR 1",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 2",
          "frTitle": "Post FR 2",
          "id": "UG9zdDpwb3N0Mg==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 2",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 2",
              "body": "Body of post EN 2",
              "locale": "EN_GB",
              "title": "Post EN 2",
            },
            Object {
              "abstract": "Résumé du post FR 2",
              "body": "Contenu du post FR 2",
              "locale": "FR_FR",
              "title": "Post FR 2",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 3",
          "frTitle": "Post FR 3",
          "id": "UG9zdDpwb3N0Mw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 3",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 3",
              "body": "Body of post EN 3",
              "locale": "EN_GB",
              "title": "Post EN 3",
            },
            Object {
              "abstract": "Résumé du post FR 3",
              "body": "Contenu du post FR 3",
              "locale": "FR_FR",
              "title": "Post FR 3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 4",
          "frTitle": "Post FR 4",
          "id": "UG9zdDpwb3N0NA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 4",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 4",
              "body": "Body of post EN 4",
              "locale": "EN_GB",
              "title": "Post EN 4",
            },
            Object {
              "abstract": "Résumé du post FR 4",
              "body": "Contenu du post FR 4",
              "locale": "FR_FR",
              "title": "Post FR 4",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 5",
          "frTitle": "Post FR 5",
          "id": "UG9zdDpwb3N0NQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 5",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 5",
              "body": "Body of post EN 5",
              "locale": "EN_GB",
              "title": "Post EN 5",
            },
            Object {
              "abstract": "Résumé du post FR 5",
              "body": "Contenu du post FR 5",
              "locale": "FR_FR",
              "title": "Post FR 5",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 6",
          "frTitle": "Post FR 6",
          "id": "UG9zdDpwb3N0Ng==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 6",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 6",
              "body": "Body of post EN 6",
              "locale": "EN_GB",
              "title": "Post EN 6",
            },
            Object {
              "abstract": "Résumé du post FR 6",
              "body": "Contenu du post FR 6",
              "locale": "FR_FR",
              "title": "Post FR 6",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 7",
          "frTitle": "Post FR 7",
          "id": "UG9zdDpwb3N0Nw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 7",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 7",
              "body": "Body of post EN 7",
              "locale": "EN_GB",
              "title": "Post EN 7",
            },
            Object {
              "abstract": "Résumé du post FR 7",
              "body": "Contenu du post FR 7",
              "locale": "FR_FR",
              "title": "Post FR 7",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 8",
          "frTitle": "Post FR 8",
          "id": "UG9zdDpwb3N0OA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 8",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 8",
              "body": "Body of post EN 8",
              "locale": "EN_GB",
              "title": "Post EN 8",
            },
            Object {
              "abstract": "Résumé du post FR 8",
              "body": "Contenu du post FR 8",
              "locale": "FR_FR",
              "title": "Post FR 8",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 9",
          "frTitle": "Post FR 9",
          "id": "UG9zdDpwb3N0OQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 9",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 9",
              "body": "Body of post EN 9",
              "locale": "EN_GB",
              "title": "Post EN 9",
            },
            Object {
              "abstract": "Résumé du post FR 9",
              "body": "Contenu du post FR 9",
              "locale": "FR_FR",
              "title": "Post FR 9",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 10",
          "frTitle": "Post FR 10",
          "id": "UG9zdDpwb3N0MTA=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 10",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 10",
              "body": "Body of post EN 10",
              "locale": "EN_GB",
              "title": "Post EN 10",
            },
            Object {
              "abstract": "Résumé du post FR 10",
              "body": "Contenu du post FR 10",
              "locale": "FR_FR",
              "title": "Post FR 10",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 12",
          "frTitle": "Post FR 12",
          "id": "UG9zdDpwb3N0MTI=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 12",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 12",
              "body": "Body of post EN 12",
              "locale": "EN_GB",
              "title": "Post EN 12",
            },
            Object {
              "abstract": "Résumé du post FR 12",
              "body": "Contenu du post FR 12",
              "locale": "FR_FR",
              "title": "Post FR 12",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 13",
          "frTitle": "Post FR 13",
          "id": "UG9zdDpwb3N0MTM=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 13",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 13",
              "body": "Body of post EN 13",
              "locale": "EN_GB",
              "title": "Post EN 13",
            },
            Object {
              "abstract": "Résumé du post FR 13",
              "body": "Contenu du post FR 13",
              "locale": "FR_FR",
              "title": "Post FR 13",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 14",
          "frTitle": "Post FR 14",
          "id": "UG9zdDpwb3N0MTQ=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 14",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 14",
              "body": "Body of post EN 14",
              "locale": "EN_GB",
              "title": "Post EN 14",
            },
            Object {
              "abstract": "Résumé du post FR 14",
              "body": "Contenu du post FR 14",
              "locale": "FR_FR",
              "title": "Post FR 14",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 15",
          "frTitle": "Post FR 15",
          "id": "UG9zdDpwb3N0MTU=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 15",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 15",
              "body": "Body of post EN 15",
              "locale": "EN_GB",
              "title": "Post EN 15",
            },
            Object {
              "abstract": "Résumé du post FR 15",
              "body": "Contenu du post FR 15",
              "locale": "FR_FR",
              "title": "Post FR 15",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Private project post for admin@test.com",
          "frTitle": "Post d'un projet privé pour admin@test.com",
          "id": "UG9zdDpwb3N0MTY=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
              "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
            },
          ],
          "publishedAt": "2019-01-01 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post d'un projet privé pour admin@test.com",
          "translations": Array [
            Object {
              "abstract": null,
              "body": "Very good, approved by la street",
              "locale": "EN_GB",
              "title": "Private project post for admin@test.com",
            },
            Object {
              "abstract": null,
              "body": "Très bien tout ça je valide",
              "locale": "FR_FR",
              "title": "Post d'un projet privé pour admin@test.com",
            },
          ],
        },
      },
    ],
    "totalCount": 15,
  },
}
`;

exports[`Internal|Query.posts array fetches the posts ordered by published date descending with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Private project post for admin@test.com",
          "frTitle": "Post d'un projet privé pour admin@test.com",
          "id": "UG9zdDpwb3N0MTY=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
              "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
            },
          ],
          "publishedAt": "2019-01-01 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post d'un projet privé pour admin@test.com",
          "translations": Array [
            Object {
              "abstract": null,
              "body": "Very good, approved by la street",
              "locale": "EN_GB",
              "title": "Private project post for admin@test.com",
            },
            Object {
              "abstract": null,
              "body": "Très bien tout ça je valide",
              "locale": "FR_FR",
              "title": "Post d'un projet privé pour admin@test.com",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 10",
          "frTitle": "Post FR 10",
          "id": "UG9zdDpwb3N0MTA=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 10",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 10",
              "body": "Body of post EN 10",
              "locale": "EN_GB",
              "title": "Post EN 10",
            },
            Object {
              "abstract": "Résumé du post FR 10",
              "body": "Contenu du post FR 10",
              "locale": "FR_FR",
              "title": "Post FR 10",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 12",
          "frTitle": "Post FR 12",
          "id": "UG9zdDpwb3N0MTI=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 12",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 12",
              "body": "Body of post EN 12",
              "locale": "EN_GB",
              "title": "Post EN 12",
            },
            Object {
              "abstract": "Résumé du post FR 12",
              "body": "Contenu du post FR 12",
              "locale": "FR_FR",
              "title": "Post FR 12",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 13",
          "frTitle": "Post FR 13",
          "id": "UG9zdDpwb3N0MTM=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 13",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 13",
              "body": "Body of post EN 13",
              "locale": "EN_GB",
              "title": "Post EN 13",
            },
            Object {
              "abstract": "Résumé du post FR 13",
              "body": "Contenu du post FR 13",
              "locale": "FR_FR",
              "title": "Post FR 13",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 14",
          "frTitle": "Post FR 14",
          "id": "UG9zdDpwb3N0MTQ=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 14",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 14",
              "body": "Body of post EN 14",
              "locale": "EN_GB",
              "title": "Post EN 14",
            },
            Object {
              "abstract": "Résumé du post FR 14",
              "body": "Contenu du post FR 14",
              "locale": "FR_FR",
              "title": "Post FR 14",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 15",
          "frTitle": "Post FR 15",
          "id": "UG9zdDpwb3N0MTU=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 15",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 15",
              "body": "Body of post EN 15",
              "locale": "EN_GB",
              "title": "Post EN 15",
            },
            Object {
              "abstract": "Résumé du post FR 15",
              "body": "Contenu du post FR 15",
              "locale": "FR_FR",
              "title": "Post FR 15",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 9",
          "frTitle": "Post FR 9",
          "id": "UG9zdDpwb3N0OQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 9",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 9",
              "body": "Body of post EN 9",
              "locale": "EN_GB",
              "title": "Post EN 9",
            },
            Object {
              "abstract": "Résumé du post FR 9",
              "body": "Contenu du post FR 9",
              "locale": "FR_FR",
              "title": "Post FR 9",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 1",
          "frTitle": "Post FR 1",
          "id": "UG9zdDpwb3N0MQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 1",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 1",
              "body": "Body of post EN 1",
              "locale": "EN_GB",
              "title": "Post EN 1",
            },
            Object {
              "abstract": "Résumé du post FR 1",
              "body": "Contenu du post FR 1",
              "locale": "FR_FR",
              "title": "Post FR 1",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 2",
          "frTitle": "Post FR 2",
          "id": "UG9zdDpwb3N0Mg==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 2",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 2",
              "body": "Body of post EN 2",
              "locale": "EN_GB",
              "title": "Post EN 2",
            },
            Object {
              "abstract": "Résumé du post FR 2",
              "body": "Contenu du post FR 2",
              "locale": "FR_FR",
              "title": "Post FR 2",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 3",
          "frTitle": "Post FR 3",
          "id": "UG9zdDpwb3N0Mw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 3",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 3",
              "body": "Body of post EN 3",
              "locale": "EN_GB",
              "title": "Post EN 3",
            },
            Object {
              "abstract": "Résumé du post FR 3",
              "body": "Contenu du post FR 3",
              "locale": "FR_FR",
              "title": "Post FR 3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 4",
          "frTitle": "Post FR 4",
          "id": "UG9zdDpwb3N0NA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 4",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 4",
              "body": "Body of post EN 4",
              "locale": "EN_GB",
              "title": "Post EN 4",
            },
            Object {
              "abstract": "Résumé du post FR 4",
              "body": "Contenu du post FR 4",
              "locale": "FR_FR",
              "title": "Post FR 4",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 5",
          "frTitle": "Post FR 5",
          "id": "UG9zdDpwb3N0NQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 5",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 5",
              "body": "Body of post EN 5",
              "locale": "EN_GB",
              "title": "Post EN 5",
            },
            Object {
              "abstract": "Résumé du post FR 5",
              "body": "Contenu du post FR 5",
              "locale": "FR_FR",
              "title": "Post FR 5",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 6",
          "frTitle": "Post FR 6",
          "id": "UG9zdDpwb3N0Ng==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 6",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 6",
              "body": "Body of post EN 6",
              "locale": "EN_GB",
              "title": "Post EN 6",
            },
            Object {
              "abstract": "Résumé du post FR 6",
              "body": "Contenu du post FR 6",
              "locale": "FR_FR",
              "title": "Post FR 6",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 7",
          "frTitle": "Post FR 7",
          "id": "UG9zdDpwb3N0Nw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 7",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 7",
              "body": "Body of post EN 7",
              "locale": "EN_GB",
              "title": "Post EN 7",
            },
            Object {
              "abstract": "Résumé du post FR 7",
              "body": "Contenu du post FR 7",
              "locale": "FR_FR",
              "title": "Post FR 7",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 8",
          "frTitle": "Post FR 8",
          "id": "UG9zdDpwb3N0OA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 8",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 8",
              "body": "Body of post EN 8",
              "locale": "EN_GB",
              "title": "Post EN 8",
            },
            Object {
              "abstract": "Résumé du post FR 8",
              "body": "Contenu du post FR 8",
              "locale": "FR_FR",
              "title": "Post FR 8",
            },
          ],
        },
      },
    ],
    "totalCount": 15,
  },
}
`;

exports[`Internal|Query.posts array fetches the posts with their translations 1`] = `
Object {
  "posts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "enTitle": "Private project post for admin@test.com",
          "frTitle": "Post d'un projet privé pour admin@test.com",
          "id": "UG9zdDpwb3N0MTY=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
              "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
            },
          ],
          "publishedAt": "2019-01-01 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post d'un projet privé pour admin@test.com",
          "translations": Array [
            Object {
              "abstract": null,
              "body": "Very good, approved by la street",
              "locale": "EN_GB",
              "title": "Private project post for admin@test.com",
            },
            Object {
              "abstract": null,
              "body": "Très bien tout ça je valide",
              "locale": "FR_FR",
              "title": "Post d'un projet privé pour admin@test.com",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 10",
          "frTitle": "Post FR 10",
          "id": "UG9zdDpwb3N0MTA=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 10",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 10",
              "body": "Body of post EN 10",
              "locale": "EN_GB",
              "title": "Post EN 10",
            },
            Object {
              "abstract": "Résumé du post FR 10",
              "body": "Contenu du post FR 10",
              "locale": "FR_FR",
              "title": "Post FR 10",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 12",
          "frTitle": "Post FR 12",
          "id": "UG9zdDpwb3N0MTI=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 12",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 12",
              "body": "Body of post EN 12",
              "locale": "EN_GB",
              "title": "Post EN 12",
            },
            Object {
              "abstract": "Résumé du post FR 12",
              "body": "Contenu du post FR 12",
              "locale": "FR_FR",
              "title": "Post FR 12",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 13",
          "frTitle": "Post FR 13",
          "id": "UG9zdDpwb3N0MTM=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 13",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 13",
              "body": "Body of post EN 13",
              "locale": "EN_GB",
              "title": "Post EN 13",
            },
            Object {
              "abstract": "Résumé du post FR 13",
              "body": "Contenu du post FR 13",
              "locale": "FR_FR",
              "title": "Post FR 13",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 14",
          "frTitle": "Post FR 14",
          "id": "UG9zdDpwb3N0MTQ=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 14",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 14",
              "body": "Body of post EN 14",
              "locale": "EN_GB",
              "title": "Post EN 14",
            },
            Object {
              "abstract": "Résumé du post FR 14",
              "body": "Contenu du post FR 14",
              "locale": "FR_FR",
              "title": "Post FR 14",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 15",
          "frTitle": "Post FR 15",
          "id": "UG9zdDpwb3N0MTU=",
          "projects": Array [],
          "publishedAt": "2018-11-05 00:00:01",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 15",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 15",
              "body": "Body of post EN 15",
              "locale": "EN_GB",
              "title": "Post EN 15",
            },
            Object {
              "abstract": "Résumé du post FR 15",
              "body": "Contenu du post FR 15",
              "locale": "FR_FR",
              "title": "Post FR 15",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 9",
          "frTitle": "Post FR 9",
          "id": "UG9zdDpwb3N0OQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-05 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 9",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 9",
              "body": "Body of post EN 9",
              "locale": "EN_GB",
              "title": "Post EN 9",
            },
            Object {
              "abstract": "Résumé du post FR 9",
              "body": "Contenu du post FR 9",
              "locale": "FR_FR",
              "title": "Post FR 9",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 1",
          "frTitle": "Post FR 1",
          "id": "UG9zdDpwb3N0MQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 1",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 1",
              "body": "Body of post EN 1",
              "locale": "EN_GB",
              "title": "Post EN 1",
            },
            Object {
              "abstract": "Résumé du post FR 1",
              "body": "Contenu du post FR 1",
              "locale": "FR_FR",
              "title": "Post FR 1",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 2",
          "frTitle": "Post FR 2",
          "id": "UG9zdDpwb3N0Mg==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 2",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 2",
              "body": "Body of post EN 2",
              "locale": "EN_GB",
              "title": "Post EN 2",
            },
            Object {
              "abstract": "Résumé du post FR 2",
              "body": "Contenu du post FR 2",
              "locale": "FR_FR",
              "title": "Post FR 2",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 3",
          "frTitle": "Post FR 3",
          "id": "UG9zdDpwb3N0Mw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 3",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 3",
              "body": "Body of post EN 3",
              "locale": "EN_GB",
              "title": "Post EN 3",
            },
            Object {
              "abstract": "Résumé du post FR 3",
              "body": "Contenu du post FR 3",
              "locale": "FR_FR",
              "title": "Post FR 3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 4",
          "frTitle": "Post FR 4",
          "id": "UG9zdDpwb3N0NA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 4",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 4",
              "body": "Body of post EN 4",
              "locale": "EN_GB",
              "title": "Post EN 4",
            },
            Object {
              "abstract": "Résumé du post FR 4",
              "body": "Contenu du post FR 4",
              "locale": "FR_FR",
              "title": "Post FR 4",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 5",
          "frTitle": "Post FR 5",
          "id": "UG9zdDpwb3N0NQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
              "title": "Croissance, innovation, disruption",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme1",
              "title": "Immobilier",
            },
          ],
          "title": "Post FR 5",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 5",
              "body": "Body of post EN 5",
              "locale": "EN_GB",
              "title": "Post EN 5",
            },
            Object {
              "abstract": "Résumé du post FR 5",
              "body": "Contenu du post FR 5",
              "locale": "FR_FR",
              "title": "Post FR 5",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 6",
          "frTitle": "Post FR 6",
          "id": "UG9zdDpwb3N0Ng==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 6",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 6",
              "body": "Body of post EN 6",
              "locale": "EN_GB",
              "title": "Post EN 6",
            },
            Object {
              "abstract": "Résumé du post FR 6",
              "body": "Contenu du post FR 6",
              "locale": "FR_FR",
              "title": "Post FR 6",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 7",
          "frTitle": "Post FR 7",
          "id": "UG9zdDpwb3N0Nw==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 7",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 7",
              "body": "Body of post EN 7",
              "locale": "EN_GB",
              "title": "Post EN 7",
            },
            Object {
              "abstract": "Résumé du post FR 7",
              "body": "Contenu du post FR 7",
              "locale": "FR_FR",
              "title": "Post FR 7",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "enTitle": "Post EN 8",
          "frTitle": "Post FR 8",
          "id": "UG9zdDpwb3N0OA==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0Mg==",
              "title": "Stratégie technologique de l'Etat et services publics",
            },
          ],
          "publishedAt": "2018-11-03 00:00:00",
          "themes": Array [
            Object {
              "id": "theme2",
              "title": "Justice",
            },
          ],
          "title": "Post FR 8",
          "translations": Array [
            Object {
              "abstract": "Abstract of post EN 8",
              "body": "Body of post EN 8",
              "locale": "EN_GB",
              "title": "Post EN 8",
            },
            Object {
              "abstract": "Résumé du post FR 8",
              "body": "Contenu du post FR 8",
              "locale": "FR_FR",
              "title": "Post FR 8",
            },
          ],
        },
      },
    ],
    "totalCount": 15,
  },
}
`;
